panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_cv_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_cv_qualifiers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_cv_qualifiers.c"
   (tentative-definition external a~0 `int volatile` ∅)
   (tentative-definition external b~1 `int const volatile` ∅)
   (tentative-definition external c~2 `int const volatile` ∅))

----- stderr -----
