panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_error_diagnostics_from_multiple_steps_are_sorted.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: value name `duplicate` redeclared as `typedef` name
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:2:1]
   │
 1 │ int duplicate = 42;
   │     ────┬────  
   │         ╰────── originally declared here as a value name
 2 │ typedef int duplicate;
   │ ─────┬─────  
   │      ╰─────── redeclared here as a `typedef` name
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_diagnostics_from_multiple_steps_are_sorted.c:3:1]
   │
 3 │ const type_missing;
   │ ──┬──  
   │   ╰──── type missing
───╯
