panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__decl_in_global_scope__test_function_definition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_function_definition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_function_definition.c"
   (function-definition external
      a~0 `fn() -> int`
      (compound-statement
         (return (42 `int`))))
   (function-definition external
      b~2 `fn(∅: int) -> int`
      (params
         b.unnamed_parameter.0~4 `int`)
      (compound-statement
         (return (42 `int`))))
   (function-definition external
      c~5 `fn(a: int) -> int`
      (params
         a~7 `int`)
      (compound-statement
         (return (a~7 `int`))))
   (function-definition external
      d~8 `fn(a: int) -> int`
      (params
         a~10 `int`)
      (compound-statement
         (compound-statement
            (return (a~10 `int`)))))
   (function-definition external
      e~11 `fn() -> int`
      (compound-statement
         (compound-statement)
         (expression ∅)
         (return (42 `int`))))
   (function-definition external
      f~13 `fn() -> int`
      (compound-statement
         (definition a~15 `int` (42 `int`))
         (expression (a~15 `int`))
         (return (a~15 `int`))))
   (function-definition external
      g~16 `fn() -> char`
      (compound-statement
         (definition c~18 `char` (truncate `char` (0 `int`)))
         (return (c~18 `char`))))
   (function-definition external
      h~19 `fn() -> int`
      (compound-statement
         (definition a~21 `int` (42 `int`))
         (compound-statement
            (definition a~22 `int` (27 `int`))
            (return (a~22 `int`)))))
   (function-definition external
      i~23 `fn(a: int) -> int`
      (params
         a~25 `int`)
      (compound-statement
         (compound-statement
            (definition a~26 `int` (42 `int`)))
         (return (a~25 `int`))))
   (function-definition external
      j~27 `fn() -> int`
      (compound-statement
         (definition a~29 `int` (42 `int`))
         (compound-statement
            (definition a~30 `int` (27 `int`))
            (expression (a~30 `int`)))
         (return (a~29 `int`)))))

----- stderr -----
